--- a/_posts/2019-05-05-Xcode命令行工具管理.md
+++ b/_posts/2019-05-05-Xcode命令行工具管理.md
@@ -2,8 +2,8 @@
 layout:     post
 title:      Xcode命令行工具管理
 subtitle:   如何切换Xcode命令行工具
-date:       2018-05-05
-author:     BY
+date:       2019-05-05
+author:     hdh
 header-img: img/post-bg-kuaidi.jpg
 catalog: true
 tags:
