--- a/_posts/2018-12-19-为博客添加-Gitalk-评论插件.md
+++ b/_posts/2018-12-19-为博客添加-Gitalk-评论插件.md
@@ -2,8 +2,8 @@
 layout:     post
 title:      为博客添加 Gitalk 评论插件
 subtitle:   BY Blog 添加 Gitalk 的评论插件了
-date:       2017-12-19
-author:     BY
+date:       2018-12-19
+author:     hdh
 header-img: img/post-bg-universe.jpg
 catalog: true
 tags:
