--- a/_posts/2019-10-04-GCD-在-Swift-中的用法.md
+++ b/_posts/2019-10-04-GCD-在-Swift-中的用法.md
@@ -2,8 +2,8 @@
 layout:     post
 title:      GCD 在 Swift 中的用法
 subtitle:   
-date:       2017-10-04
-author:     BY
+date:       2019-10-04
+author:     hdh
 header-img: img/home-bg-art.jpg
 catalog: true
 tags:
