--- a/_posts/2019-09-11-Swift-4-新特性.md
+++ b/_posts/2019-09-11-Swift-4-新特性.md
@@ -2,8 +2,8 @@
 layout:     post
 title:      Swift 4 新特性
 subtitle:   很高兴 Swift 4 不再是一门新语言了😅
-date:       2017-09-11
-author:     BY
+date:       2019-09-11
+author:     hdh
 header-img: img/post-bg-ios10.jpg
 catalog: true
 tags:
