--- a/_posts/2019-07-04-Xcode9-无线调试功能.md
+++ b/_posts/2019-07-04-Xcode9-无线调试功能.md
@@ -2,8 +2,8 @@
 layout:     post
 title:      Xcode9 无线调试功能
 subtitle:   zsh的快速配置
-date:       2017-07-04
-author:     BY
+date:       2019-07-04
+author:     hdh
 header-img: img/post-bg-coffee.jpeg
 catalog: true
 tags:
