Update and rename 2017-05-04-R.swift-的使用.md to 2019-05-04-R.swift-的使用.md

--- a/_posts/2019-05-04-R.swift-的使用.md
+++ b/_posts/2019-05-04-R.swift-的使用.md
@@ -2,8 +2,8 @@
 layout:     post
 title:      R.swift 的使用
 subtitle:   在项目中引入 R.swift，更安全的获取资源
-date:       2017-05-04
-author:     BY
+date:       2019-05-04
+author:     hdh
 header-img: img/post-bg-swift2.jpg
 catalog: true
 tags:
