--- a/_posts/2019-03-06-Swift-代理模式.md
+++ b/_posts/2019-03-06-Swift-代理模式.md
@@ -2,8 +2,8 @@
 layout:     post
 title:      Swift 代理模式
 subtitle:   Swift中如何使用代理模式
-date:       2017-03-06
-author:     BY
+date:       2019-03-06
+author:     hdh
 header-img: img/post-bg-ios10.jpg
 catalog: true
 tags:
